# expense-tracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
app/: main.py  models.py
app/api/: deps.py  main.py
app/api/routes/: expenses.py  users.py
app/core/: config.py  db.py
app/crud/: expenses.py  users.py
app/tests/: conftest.py  utils.py
app/tests/E2E/: conftest.py
app/tests/E2E/routes/: test_expenses.py  test_users.py
app/tests/api/routes/: test_expenses.py  test_users.py
app/tests/integration/: test_auth_service.py
app/tests/load/: locustfile.py
